--- a/calendar_app/calendar_app.html
+++ b/calendar_app/calendar_app.html
@@ -2,108 +2,36 @@
 	<head>
 		<title>Calendar App</title>
 	</head>
-	<style src="http://www.google.com/fonts#UsePlace:use/Collection:Open+Sans:400,600,800" type="text/css">
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,800' rel='stylesheet' type='text/css'>
+	<link href='css/main.css' rel="stylesheet" >
 	<style type="text/css">
-		body{
-			margin: 0;
-			padding: 0;
-		}
-
-		#content-container{
-			width: 80%; 
-			margin: 0 auto;
-		}
-
-		#calendar{
-			background-color: #DADADA;
-			border: 1px solid green;
-			width: 70%;
-			margin: 0 auto;
-			padding: 25px;
-		}
-		div{
-			text-align: center;
-		}
-
-		div.day-header{
-			margin-bottom: 14px;
-		}
-
-		div.prev{
-			width: 5%;
-			float: left;
-			border: 1px solid grey;
-		}
-
-		div.date-display{
-			width: 20%;
-			float: left;
-			border: 1px solid grey;
-		}
-
-		.date-display div#dayOfTheWeek{
-			font-size: 4em;
-			border: 1px solid grey;
-		}
-
-		div.next{
-			width: 5%;
-			float: left;
-			border: 1px solid grey;
-		}
-
-		div.event-adder{
-			width: 50%;
-		}
-
-		.event-container{
-			clear: all;
-		}
-
-		.event-button{
-			border: 0;
-			background: gold;
-			padding: 10px;
-		}
-
-		.clearfix:after {
-		     visibility: hidden;
-		     display: block;
-		     font-size: 0;
-		     content: " ";
-		     clear: both;
-		     height: 0;
-		}
-
-		.clearfix { display: inline-block; }
-		/* start commented backslash hack \*/
-		* html .clearfix { height: 1%; }
-		.clearfix { display: block; }
-
-		.clear{
-			clear: all;
+		#date{
+			font-weight: 600;
+			font-size: 2em;
 		}
 	</style>
 	<body>
 		<div id="container">
 			<section id="content-container">
 				<div id="calendar">
-					<div class="day-header clearfix">
-						<div class="prev">Prev</div>
+					<div id="day-header" class="clearfix">
+						<div class="prev direction-buttons">Prev</div>
 						<div class="date-display">
 							<div id="dayOfTheWeek"></div>
+							<div id="date"></div>
 						</div>
-						<div class="next">Next</div>
+						<div class="next direction-buttons">Next</div>
 					</div>
 					<div id="event-container" class="clearfix">
 						<div class="event">
+							Event placeholder
 						</div>
 					</div>
-					<div id="event-adder" class="clear">
+					<div class="event-adder" class="clear">
 						<input type="button" class="event-button" value="Add Event">
 					</div>
 				</div>
-			<section>
+			</section>
 		</div>
 		<script type="text/javascript">
 			var today = new Date();
@@ -144,6 +72,8 @@
 			console.log("It is "+ dayOfTheWeek +" " + month + "/" + day + "/" + year);
 
 			document.getElementById('dayOfTheWeek').innerHTML = dayOfTheWeek;
+			document.getElementById('date').innerHTML = month + "/" + day + "/" + year;
+
 		</script>
 	</body>
 </html>
