AJAX_table.html: finally got around to actually adding the tables, I still need to decide how many columns I want and what exactly I'm going to sort

--- a/Messarounds/AJAX_table.html
+++ b/Messarounds/AJAX_table.html
@@ -1,8 +1,40 @@
 <html>
 	<head>
-		<title>AJAX Sort and Search Table</title>
+		<title>Sort and Search Table</title>
+		<style type="text/css">
+			table, td, th{
+				border: 1px solid #000;
+				border-collapse: collapse;
+			}
+
+			th,td{
+				padding: 5px;
+			}
+		</style>
 	</head>
 	<body>
+		<table>
+			<thead>
+				<th >Heading</th>
+				<th >Heading</th>
+				<th >Heading</th>
+			</thead>
+			<tbody>
+			<tr>
+				<td >Data</td>
+				<td >Data</td>
+				<td >Data</td>
+			</tr>
+			<tr>
+				<td >Data</td>
+				<td >Data</td>
+				<td >Data</td>
+			</tr>
+			</tbody>
+		</table>	
 
-	<body>
+	<script type="text/javascript">
+
+	</script>
+	</body>
 </html>
