--- a/responsive_page/demo.html
+++ b/responsive_page/demo.html
@@ -5,10 +5,23 @@
     <meta charset="utf-8"/>
     <meta name="author" content="Paul Robert Lloyd"/>
     <meta name="description" content=""/>
+    <meta name="viewport" content="initial-scale=1.0, width=device-width"/>
+
+    <!--detect js+svg support-->
+    <script>
+        document.getElementsByTagName('html')[0].className += ' js';
+
+        (function flagSVG() {
+            var ns = {'svg': 'http://www.w3.org/2000/svg'};
+            if(!!document.createElementNS && !!document.createElementNS(ns.svg, 'svg').createSVGRect) {
+                 document.getElementsByTagName('html')[0].className += ' svg';
+            }
+        })();
+    </script>
 
     <!--fonts-->
     <noscript>
-        <link rel="stylesheet" href="http://f.fontdeck.com/s/css/vs28dz705JJtCmrxyO35ASy7y2Q/netmagazine.com/18137.css" type="text/css" />
+        <link rel="stylesheet" href="http://f.fontdeck.com/s/css/vs28dz705JJtCmrxyO35ASy7y2Q/roadtrip.paulrobertlloyd.com/18137.css" type="text/css" />
     </noscript>
     <script>
         document.getElementsByTagName('html')[0].className += ' wf-loading';
@@ -21,16 +34,23 @@
             s.appendChild(wf);
         })();
     </script>
+    <script src="_js/lib/responsive-enhance/responsive-enhance.min.js"></script>
 
     <!--css-->
     <link rel="stylesheet" href="_css/base.css" type="text/css" media="all"/>
     <link rel="stylesheet" href="_css/patterns.css" type="text/css" media="all"/>
+    <link rel="stylesheet" href="_css/layout.css" type="text/css" media="all"/>
+
+    <!--[if lt IE 9]>
+        <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+        <script src="_js/lib/respond/respond.min.js"></script>
+    <![endif]-->
 
     <!--http://microformats.org/profile/specs/-->
     <link rel="profile" href="http://microformats.org/profile/specs/" title="Microformats"/>
 
     <!--meta-->
-    <title>Road Trip: Patterns</title>
+    <title>Road Trip: Austin, TX - San Francisco, CA</title>
 </head>
 
 <body>
@@ -43,193 +63,142 @@
 
     <div role="document" class="document">
 
-        <figure class="media-frame">
-            <img class="media-object" src="http://dummyimage.com/288x160/ccc/eee.png" alt="Arriving in Las Vagas"/>
-        </figure><!--/.media-frame-->
-
-        <figure class="media-frame">
-            <iframe class="media-object" src="http://player.vimeo.com/video/40493662?color=d06f1c&#38;portrait=0&#38;title=0&#38;byline=0" width="288"></iframe>
-        </figure><!--/.media-frame-->
-
-        <header class="location">
-            <h1 class="title">Arriving in Las Vegas</h1>
-            <p class="meta mile"><span class="unit">Mile</span> <span class="value">1456</span></p>
-        </header>
-
-        <h2>Second-level heading</h2>
-        <h3>Third-level heading</h3>
-        <p class="lede">The sights and sounds as we arrive in this gleaming city in the desert.</p>
-        <p>The <strong>Las Vegas Strip</strong> is an approximately 4.2-mile (6.8 km) stretch of Las Vegas Boulevard in Clark County, Nevada; adjacent to, but outside the city limits of Las Vegas proper. The Strip lies within the unincorporated townships of Paradise and Winchester. Most of the Strip has been designated an All-American Road.</p>
-        <p>Many of the largest hotel, casino and resort properties in the world are located on the Las Vegas Strip. Nineteen of the world&#8217;s 25 largest hotels by room count are on the Strip, with a total of over 67,000 rooms. One of the 19, the LVH - Las Vegas Hotel &#38; Casino, (Formerly the Las Vegas Hilton), is an &#8216;off-Strip&#8217; property but is located less than 0.5 miles (0.8 km) east of the Strip.</p>
-        <p>One of the most visible aspects of Las Vegas&#8217; cityscape is its use of dramatic architecture. The modernisation of hotels, casinos, restaurants, and residential high-rises on the Strip has established the city as one of the most popular destinations for tourists.</p>
-        <p class="meta"><a href="#">Text from Wikipedia</a>. Some rights reserved.</p>
-
-        <h2>What is this site all about?</h2>
-        <p>On March 12 2012, three web developers left the throngs of SXSW in Austin, and headed west towards California. Covering 5 states over 4 nights and 3 days, they arrived in San Francisco on March 15. But really, this is just some placeholder content to demonstrate how one might go about designing a responsive website.</p>
-
-        <h3>Journeymen</h3>
-        <ul class="vcards">
-            <li class="vcard">
-                <img class="photo" src="_assets/traveller-paul.png" alt="" width="64" height="64"/>
-                <h4 class="fn n">Paul Lloyd</h4>
-                <p>
-                    <a class="url" href="http://paulrobertlloyd.com/">paulrobertlloyd.com</a><br/>
-                    <a class="twitter" href="http://twitter.com/paulrobertlloyd/">@paulrobertlloyd</a>
-                </p>
-            </li>
-            <li class="vcard">
-                <img class="photo" src="_assets/traveller-andy.png" alt="" width="64" height="64"/>
-                <h4 class="fn n">Andy Hume</h4>
-                <p>
-                    <a class="twitter" class="url" href="http://andyhume.net/">andyhume.net</a><br/>
-                    <a class="twitter" href="http://twitter.com/andyhume/">@andyhume</a>
-                </p>
-            </li>
-            <li class="vcard">
-                <img class="photo" src="_assets/traveller-ben.png" alt="" width="64" height="64"/>
-                <h4 class="fn n">Ben Barnett</h4>
-                <p>
-                    <a class="url" href="http://benbarnett.net/">benbarnett.net</a><br/>
-                    <a class="twitter" href="http://twitter.com/benpbarnett">@benpbarnett</a>
-                </p>
-            </li>
-        </ul><!--/.vcards-->
-
-        <h2>Related Links</h2>
-        <ul class="links">
-            <li class="link">
-                <h3><a href="http://visitlasvegas.com/">Visit Las Vegas</a></h3>
-                <p>Your official What Happens in Vegas, Stays in Vegas resource. Find information on hotels, restaurants, golf courses and things to do.</p>
-            </li>
-            <li class="link">
-                <h3><a href="http://lonelyplanet.com/usa/las-vegas/">Lonely Planet: Las Vegas</a></h3>
-                <p>Vegas is the ultimate escape. Time is irrelevant here, especially after a few frenzied and intoxicating sleepless nights on the Strip.</p>
-            </li>
-        </ul><!--/.links-->
-
         <header class="day">
             <h1>Day 1</h1>
             <p class="meta">Austin, <abbr title="Texas">TX</abbr> - Albuquerque, <abbr title="New Mexico">NM</abbr></p>
         </header><!--/.day-->
 
-        <ol class="media" id="thumbnails">
-            <li class="media-item">
-                <a href="#">
-                    <img src="http://dummyimage.com/240x160/ccc/eee.png" alt="Title of media item"/>
-                    <h2 class="title">Title of media item</h2>
-                    <time>10:04PM</time>
-                </a>
-            </li>
-            <li class="media-item">
-                <a href="#">
-                    <img src="http://dummyimage.com/240x160/ccc/eee.png" alt="Title of media item"/>
-                    <h2 class="title">Title of media item</h2>
-                    <time>10:04PM</time>
-                </a>
-            </li>
-            <li class="media-item">
-                <a href="#">
-                    <img src="http://dummyimage.com/240x160/ccc/eee.png" alt="Title of media item"/>
-                    <h2 class="title">Title of media item</h2>
-                    <time>10:04PM</time>
-                </a>
-            </li>
-            <li class="media-item">
-                <a href="#">
-                    <img src="http://dummyimage.com/240x160/ccc/eee.png" alt="Title of media item"/>
-                    <h2 class="title">Title of media item</h2>
-                    <time>10:04PM</time>
-                </a>
-            </li>
-            <li class="media-item">
-                <a href="#">
-                    <img src="http://dummyimage.com/240x160/ccc/eee.png" alt="Title of media item"/>
-                    <h2 class="title">Title of media item</h2>
-                    <time>10:04PM</time>
-                </a>
-            </li>
-            <li class="media-item">
-                <a href="#">
-                    <img src="http://dummyimage.com/240x160/ccc/eee.png" alt="Title of media item"/>
-                    <h2 class="title">Title of media item</h2>
-                    <time>10:04PM</time>
-                </a>
-            </li>
-            <li class="media-item">
-                <a href="#">
-                    <img src="http://dummyimage.com/240x160/ccc/eee.png" alt="Title of media item"/>
-                    <h2 class="title">Title of media item</h2>
-                    <time>10:04PM</time>
-                </a>
-            </li>
-            <li class="media-item">
-                <a href="#">
-                    <img src="http://dummyimage.com/240x160/ccc/eee.png" alt="Title of media item"/>
-                    <h2 class="title">Title of media item</h2>
-                    <time>10:04PM</time>
-                </a>
-            </li>
-            <li class="media-item">
-                <a href="#">
-                    <img src="http://dummyimage.com/240x160/ccc/eee.png" alt="Title of media item"/>
-                    <h2 class="title">Title of media item</h2>
-                    <time>10:04PM</time>
-                </a>
-            </li>
-            <li class="media-item">
-                <a href="#">
-                    <img src="http://dummyimage.com/240x160/ccc/eee.png" alt="Title of media item"/>
-                    <h2 class="title">Title of media item</h2>
-                    <time>10:04PM</time>
-                </a>
-            </li>
-            <li class="media-item">
-                <a href="#">
-                    <img src="http://dummyimage.com/240x160/ccc/eee.png" alt="Title of media item"/>
-                    <h2 class="title">Title of media item</h2>
-                    <time>10:04PM</time>
-                </a>
-            </li>
-            <li class="media-item">
-                <a href="#">
-                    <img src="http://dummyimage.com/240x160/ccc/eee.png" alt="Title of media item"/>
-                    <h2 class="title">Title of media item</h2>
-                    <time>10:04PM</time>
-                </a>
-            </li>
-        </ol><!--/.media-->
+        <div role="main" class="main">
+            <ol class="media">
+                <li class="media-item">
+                    <a href="media-item.html">
+                        <img src="_assets/photos/1.jpg" alt=""/>
+                        <h2 class="title">The first overtake</h2>
+                        <time>11:04 AM</time>
+                    </a>
+                </li>
+                <li class="media-item">
+                    <a href="media-item.html">
+                        <img src="_assets/photos/2.jpg" alt=""/>
+                        <h2 class="title">Brady city hall</h2>
+                        <time>12:15 PM</time>
+                    </a>
+                </li>
+                <li class="media-item">
+                    <a href="media-item.html">
+                        <img src="_assets/photos/3.jpg" alt=""/>
+                        <h2 class="title">New Mexican Ranch</h2>
+                        <time>15:04 PM</time>
+                    </a>
+                </li>
+                <li class="media-item">
+                    <a href="media-item.html">
+                        <img src="_assets/photos/4.jpg" alt=""/>
+                        <h2 class="title">Fishin&#8217;</h2>
+                        <time>14:27 PM</time>
+                    </a>
+                </li>
+                <li class="media-item">
+                    <a href="media-item.html">
+                        <img src="_assets/photos/5.jpg" alt=""/>
+                        <h2 class="title">Every cloud</h2>
+                        <time>14:32 PM</time>
+                    </a>
+                </li>
+                <li class="media-item">
+                    <a href="media-item.html">
+                        <img src="_assets/photos/6.jpg" alt=""/>
+                        <h2 class="title">Road to nowhere</h2>
+                        <time>15:21 PM</time>
+                    </a>
+                </li>
+                <li class="media-item">
+                    <a href="media-item.html">
+                        <img src="_assets/photos/7.jpg" alt=""/>
+                        <h2 class="title">Haulage</h2>
+                        <time>16:01 PM</time>
+                    </a>
+                </li>
+                <li class="media-item">
+                    <a href="media-item.html">
+                        <img src="_assets/photos/8.jpg" alt=""/>
+                        <h2 class="title">Western Wear</h2>
+                        <time>16:22 PM</time>
+                    </a>
+                </li>
+                <li class="media-item">
+                    <a href="media-item.html">
+                        <img src="_assets/photos/9.jpg" alt=""/>
+                        <h2 class="title">Wrong turn</h2>
+                        <time>17:43 PM</time>
+                    </a>
+                </li>
+                <li class="media-item">
+                    <a href="media-item.html">
+                        <img src="_assets/photos/10.jpg" alt=""/>
+                        <h2 class="title">Roswell</h2>
+                        <time>17:46 PM</time>
+                    </a>
+                </li>
+                <li class="media-item">
+                    <a href="media-item.html">
+                        <img src="_assets/photos/11.jpg" alt=""/>
+                        <h2 class="title">Drive Thru</h2>
+                        <time>20:04 PM</time>
+                    </a>
+                </li>
+                <li class="media-item">
+                    <a href="media-item.html">
+                        <img src="_assets/photos/12.jpg" alt=""/>
+                        <h2 class="title">Roswell city hall</h2>
+                        <time>21:22 PM</time>
+                    </a>
+                </li>
+            </ol>
 
-        <div class="vcard">
-            <p>
-                <img class="photo" src="_assets/traveller-paul.png" alt="" width="64" height="64"/>
-                Taken by <a class="url fn n" href="#">Paul</a><br/>
-                <time>13 March 2012 at 10:04PM</time>
-            </p>
-        </div><!--/.vcard-->
+            <ul role="navigation" class="pages">
+                <li class="page-prev"><a href="#">&#8592; Prev</a></li>
+                <li class="page-current"><a rel="prev" href="#">1</a></li>
+                <li><a href="#">2</a></li>
+                <li><a href="#">3</a></li>
+                <li><a href="#">4</a></li>
+                <li><a href="#">5</a></li>
+                <li class="page-next"><a rel="next" href="#">Next &#8594;</a></li>
+            </ul>
+        </div><!--/main-->
 
-        <figure>
-            <img class="map" src="_assets/staticmap.png"/>
-            <figcaption>
-                <p>Taken on the Las Vegas Strip, Las Vegas, Nevada.</p>
-            </figcaption>
-        </figure>
+        <div role="complementary" class="complementary">
+            <h2>What is this site all about?</h2>
+            <p>On March 12 2012, three web developers left the throngs of SXSW in Austin, Texas and headed west towards California. Covering 5 states over 4 nights and 3 days, they arrived in San Francisco on March 15. But really, this is just some placeholder content to demonstrate how one might go about designing a responsive website.</p>
 
-        <nav>
-            <ul role="navigation" class="items">
-                <li class="item-prev"><a href="#" title="Previous Location">&#8592; Previous</a></li>
-                <li class="item-next"><a href="#" title="Next Location">Next &#8594;</a></li>
-            </ul><!--/.items-->
-        </nav>
-
-        <ul role="navigation" class="pages">
-            <li class="page-prev"><a href="#">&#8592; Prev</a></li>
-            <li class="page-current"><a rel="prev" href="#">1</a></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
-            <li><a href="#">4</a></li>
-            <li><a href="#">5</a></li>
-            <li class="page-next"><a rel="next" href="#">Next &#8594;</a></li>
-        </ul><!--/.pages-->
+            <h3>Journeymen</h3>
+            <ul class="vcards">
+                <li class="vcard">
+                    <img class="photo" src="_assets/traveller-paul.png" alt="" width="64" height="64"/>
+                    <h4 class="fn n">Paul Lloyd</h4>
+                    <p>
+                        <a class="url" href="http://paulrobertlloyd.com/">paulrobertlloyd.com</a><br/>
+                        <a class="twitter" href="http://twitter.com/paulrobertlloyd/">@paulrobertlloyd</a>
+                    </p>
+                </li>
+                <li class="vcard">
+                    <img class="photo" src="_assets/traveller-andy.png" alt="" width="64" height="64"/>
+                    <h4 class="fn n">Andy Hume</h4>
+                    <p>
+                        <a class="twitter" class="url" href="http://andyhume.net/">andyhume.net</a><br/>
+                        <a class="twitter" href="http://twitter.com/andyhume/">@andyhume</a>
+                    </p>
+                </li>
+                <li class="vcard">
+                    <img class="photo" src="_assets/traveller-ben.png" alt="" width="64" height="64"/>
+                    <h4 class="fn n">Ben Barnett</h4>
+                    <p>
+                        <a class="url" href="http://benbarnett.net/">benbarnett.net</a><br/>
+                        <a class="twitter" href="http://twitter.com/benpbarnett">@benpbarnett</a>
+                    </p>
+                </li>
+            </ul>
+        </div><!--/complementary-->
 
     </div><!--/.document-->
 
@@ -243,7 +212,7 @@
     <div role="contentinfo" class="contentinfo">
         <footer>
             <img src="_assets/logo-prl.png" width="48" height="72" alt=""/>
-            <p class="copyright">&#169; 2012 <a href="http://paulrobertlloyd.com/">Paul Robert Lloyd</a></p>
+            <p class="copyright">&#169; 2012 <a href="http://paulrobertlloyd.com/">Paul Robert Lloyd</a>. Photos &#169; 2012 <a href="http://www.flickr.com/photos/benpbarnett/">Ben Barnett</a>.</p>
             <p class="license"><small>Code licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/2.0/uk/" title="Creative Commons Attribution-Non-Commercial-Share Alike 2.0 UK: England &#38; Wales">Creative Commons BY-NC-SA license</a>.</small></p>
         </footer>
     </div><!--/.contentinfo-->
